[package]
name = "wasm-array-cp"
version = "0.1.0"
edition = "2021"
authors = ["Spxg <unsafe@outlook.es>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spxg/wasm-array-cp"
description = "Copy array buffer on the JS side"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "javascript"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
